--- a/src/sweattrails/qt/maps.html
+++ b/src/sweattrails/qt/maps.html
@@ -23,15 +23,15 @@
 <!DOCTYPE html>
     <html>
 	    <head>
-	    <meta name=viewport content=initial-scale=1.0, user-scalable=yes/> 
+	    <meta name=viewport content="initial-scale=1.0, user-scalable=yes"/> 
 	    <meta http-equiv=content-type content=text/html; charset=UTF-8/>
 	    <title>SweatTrails Map</title>
 	    <style type=text/css>
 	       html { height: 100% }
-	       body { height: 100%; margin: 0; padding: 0; background-color: ${bgcolor}; color: ${fgcolor} }
+	       body { height: 100%; margin: 0; padding: 0; background-color: ${bgcolor}; color: ${fgcolor}; }
 	       #map-canvas { height: 100% }
 	    </style>
-	    <script type=text/javascript src=http://maps.googleapis.com/maps/api/js?key=${mapskey}&sensor=false></script> );
+	    <script type=text/javascript src=http://maps.googleapis.com/maps/api/js?key=${mapskey}&sensor=false></script>
 	
 	    <!-- local functions -->
 	    <script type=text/javascript>
@@ -148,14 +148,12 @@
 	
 	            // catch signals to redraw intervals
 	            // bridge.drawIntervals.connect(drawIntervals)
-	
-	            // we're done now let the C++ side draw its overlays
 	            bridge.drawOverlays();
 	        }
 	    </script>
     </head>
-    <body onload=initialize()>
-        <div id=map-canvas></div>
+    <body onload="initialize();">
+        <div id="map-canvas"></div>
     </body>
 </html>
 
