maps sorta work
--HG--
branch : maps
rename : src/grumble/qt/bridge.py => src/sweattrails/qt/bridge.py
extra : close : 1

--- a/src/sweattrails/qt/maps.html
+++ b/src/sweattrails/qt/maps.html
@@ -21,140 +21,41 @@
 -->
 
 <!DOCTYPE html>
-    <html>
-	    <head>
-	    <meta name=viewport content="initial-scale=1.0, user-scalable=yes"/> 
-	    <meta http-equiv=content-type content=text/html; charset=UTF-8/>
-	    <title>SweatTrails Map</title>
-	    <style type=text/css>
-	       html { height: 100% }
-	       body { height: 100%; margin: 0; padding: 0; background-color: ${bgcolor}; color: ${fgcolor}; }
-	       #map-canvas { height: 100% }
-	    </style>
-	    <script type=text/javascript src=http://maps.googleapis.com/maps/api/js?key=${mapskey}&sensor=false></script>
-	
-	    <!-- local functions -->
-	    <script type=text/javascript>
-	        var map;           // the map object
-	        var intervalList;  // array of intervals
-	        var markerList;    // array of markers
-	        var polyList;      // array of polylines
-	
-	        // Draw the entire route, we use a local js bridge object
-	        // to supply the data to
-	        //  a) reduce bandwidth and
-	        //  b) allow local manipulation.
-	        // This makes the UI considerably more 'snappy'
-	        function drawRoute() {
-	            // route will be drawn with these options
-	            var routeOptionsYellow = {
-	                strokeColor: '#FFFF00',
-	                strokeOpacity: 0.4,
-	                strokeWeight: 10,
-	                zIndex: -2
-	            };
-	
-	            // load the GPS co-ordinates
-	            var latlons = bridge.getLatLons(0); // interval 0 is the entire route
-	
-	            // create the route Polyline
-	            var routeYellow = new google.maps.Polyline(routeOptionsYellow);
-	            routeYellow.setMap(map);
-	
-	            // lastly, populate the route path
-	            var path = routeYellow.getPath();
-	            var j=0;
-	            while (j < latlons.length) { 
-	                path.push(new google.maps.LatLng(latlons[j], latlons[j+1]));
-	                j += 2;
-	            }
-	        }
-	
-	        function drawIntervals() { 
-	            // intervals will be drawn with these options
-	            var polyOptions = {
-	                strokeColor: '#0000FF',
-	                strokeOpacity: 0.6,
-	                strokeWeight: 10,
-	                zIndex: -1  // put at the bottom
-	            }
-	
-	            // remove previous intervals highlighted
-	            j= intervalList.length;
-	            while (j) {
-	                var highlighted = intervalList.pop();
-	                highlighted.setMap(null);
-	                j--;
-	            }
-	
-	            // how many to draw?
-	            var intervals = bridge.intervalCount();
-	            while (intervals > 0) {
-	                var latlons = bridge.getLatLons(intervals);
-	                var intervalHighlighter = new google.maps.Polyline(polyOptions);
-	                intervalHighlighter.setMap(map);
-	                intervalList.push(intervalHighlighter);
-	                var path = intervalHighlighter.getPath();
-	                var j=0;
-	                while (j < latlons.length) {
-	                    path.push(new google.maps.LatLng(latlons[j], latlons[j+1]));
-	                    j += 2;
-	                }
-	                intervals--;
-	            }
-	        }
-	
-	        // initialise function called when map loaded
-	        function initialize() {
-	
-	            // TERRAIN style map please and make it draggable
-	            // note that because QT webkit offers touch/gesture
-	            // support the Google API only supports dragging
-	            // via gestures - this is alrady registered as a bug
-	            // with the google map team
-	            var controlOptions = {
-	                style: google.maps.MapTypeControlStyle.DEFAULT
-	            };
-	            var myOptions = {
-	                draggable: true,
-	                mapTypeId: google.maps.MapTypeId.TERRAIN,
-	                tilt: 45,
-	                streetViewControl: false
-	            };
-	
-	            // setup the map, and fit to contain the limits of the route
-	            map = new google.maps.Map(document.getElementById('map-canvas'), myOptions);
-	            box = bridge.getBoundingBox()
-	            var sw = new google.maps.LatLng(box[0], box[1]);
-	            var ne = new google.maps.LatLng(box[2], box[3]);
-	            var bounds = new google.maps.LatLngBounds(sw, ne);
-	            map.fitBounds(bounds);
-	
-	            // add the bike layer, useful in some areas, but coverage
-	            // is limited, US gets best coverage at this point (Summer 2011)
-	            var bikeLayer = new google.maps.BicyclingLayer();
-	            bikeLayer.setMap(map);
-	
-	            // initialise local variables
-	            markerList = new Array();
-	            intervalList = new Array();
-	            polyList = new Array();
-	
-	            // draw the main route data, getting the geo
-	            // data from the JS bridge - reduces data sent/received
-	            // to the map server and makes the UI pretty snappy
-	            drawRoute();
-	            drawIntervals();
-	
-	            // catch signals to redraw intervals
-	            // bridge.drawIntervals.connect(drawIntervals)
-	            bridge.drawOverlays();
-	        }
-	    </script>
-    </head>
-    <body onload="initialize();">
-        <div id="map-canvas"></div>
-    </body>
+<html>
+<head>
+<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
+<meta http-equiv=content-type content=text/html; charset=UTF-8 />
+<title>SweatTrails Map</title>
+<style type=text/css>
+html {
+	height: 100%
+}
+
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: ${bgcolor};
+	color: ${fgcolor};
+}
+
+#map-canvas {
+	height: 100%
+}
+</style>
+<script type="text/javascript"
+		src="http://maps.googleapis.com/maps/api/js?key=${mapskey}&sensor=false"></script>
+<script type="text/javascript"
+		src="qrc:sweattrails/qt/maps.js">
+</script>
+
+<!-- local functions -->
+<script type=text/javascript>
+</script>
+</head>
+<body onload="initialize();">
+	<div id="map-canvas"></div>
+</body>
 </html>
 
 
