--- a/src/sweattrails/qt/maps.html
+++ b/src/sweattrails/qt/maps.html
@@ -19,43 +19,32 @@
    Copyright (c) 2009 Greg Lonnon (greg.lonnon@gmail.com)
                  2011 Mark Liversedge (liversedge@gmail.com)
 -->
-
 <!DOCTYPE html>
 <html>
-<head>
-<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
-<meta http-equiv=content-type content=text/html; charset=UTF-8 />
-<title>SweatTrails Map</title>
-<style type=text/css>
-html {
-	height: 100%
-}
-
-body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: ${bgcolor};
-	color: ${fgcolor};
-}
-
-#map-canvas {
-	height: 100%
-}
-</style>
-<script type="text/javascript"
-		src="http://maps.googleapis.com/maps/api/js?key=${mapskey}&sensor=false"></script>
-<script type="text/javascript"
-		src="qrc:sweattrails/qt/maps.js">
-</script>
-
-<!-- local functions -->
-<script type=text/javascript>
-</script>
-</head>
-<body onload="initialize();">
-	<div id="map-canvas"></div>
-</body>
+	<head>
+		<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
+		<meta http-equiv=content-type content=text/html; charset=UTF-8 />
+		<title>SweatTrails Map</title>
+		<style type=text/css>
+			html {
+				height: 100%;
+			}
+			body {
+				height: 100%;
+				margin: 0;
+				padding: 0;
+				background-color: #343434;
+				color: #FFFFFF;
+			}
+			#map-canvas {
+				height: 100%;
+			}
+		</style>
+		<script type="text/javascript" src="maps.js"></script>
+	</head>
+	<body onload="initialize();">
+		<div id="map-canvas"></div>
+	</body>
 </html>
 
 
