--- a/src/sweattrails/qt/maps.html
+++ b/src/sweattrails/qt/maps.html
@@ -14,16 +14,14 @@
    You should have received a copy of the GNU General Public License along
    with this program; if not, write to the Free Software Foundation, Inc., 51
    Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
-
-   This module uses ideas and code from GoldenCheetah:
-   Copyright (c) 2009 Greg Lonnon (greg.lonnon@gmail.com)
-                 2011 Mark Liversedge (liversedge@gmail.com)
 -->
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
 		<meta http-equiv=content-type content=text/html; charset=UTF-8 />
+                <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
+                <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 		<title>SweatTrails Map</title>
 		<style type=text/css>
 			html {
