--- a/src/sweattrails/qt/session/maps.html
+++ b/src/sweattrails/qt/session/maps.html
@@ -20,8 +20,8 @@
 	<head>
 		<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
 		<meta http-equiv=content-type content=text/html; charset=UTF-8 />
-                <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css"/>
-                <script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+                <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+                <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" type="text/javascript"></script>
 		<title>SweatTrails Map</title>
 		<style type=text/css>
 			html {
