--- a/src/sweattrails/qt/session/maps.html
+++ b/src/sweattrails/qt/session/maps.html
@@ -20,9 +20,12 @@
 	<head>
 		<meta name=viewport content="initial-scale=1.0, user-scalable=yes" />
 		<meta http-equiv=content-type content=text/html; charset=UTF-8 />
-                <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
-                <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" type="text/javascript"></script>
-		<title>SweatTrails Map</title>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+        <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" type="text/javascript"></script>
+        {% if usewebchannel %}
+            <script src="qrc:///qtwebchannel/qwebchannel.js" type="text/javascript"></script>#}
+        {% endif %}
+        <title>SweatTrails Map</title>
 		<style type=text/css>
 			html {
 				height: 100%;
@@ -38,11 +41,8 @@
 				height: 100%;
 			}
 		</style>
-		<script type="text/javascript" src="maps.js"></script>
 	</head>
-	<body onload="initialize();">
+	<body>
 		<div id="map-canvas"></div>
 	</body>
 </html>
-
-
